@@ -25,8 +25,6 @@ import java.util.Map;
 
 import org.junit.jupiter.api.Test;
 
-import com.google.common.collect.ImmutableMap;
-
 import io.wcm.tooling.commons.contentpackagebuilder.element.ContentElement;
 import io.wcm.tooling.commons.contentpackagebuilder.element.ContentElementImpl;
 
@@ -34,18 +32,18 @@ class ContentElementConverterTest {
 
   @Test
   void testToMap() {
-    ContentElement root = new ContentElementImpl("root", ImmutableMap.of("kra", "vra", "krb", "vrb"));
-    ContentElement o1 = new ContentElementImpl("o1", ImmutableMap.of("k1a", "v1a", "k1b", "v1b"));
-    ContentElement o11 = new ContentElementImpl("o11", ImmutableMap.of("k11a", "v11a", "k11b", "v11b"));
-    ContentElement o2 = new ContentElementImpl("o2", ImmutableMap.of("k2a", "v2a", "k2b", "v2b"));
+    ContentElement root = new ContentElementImpl("root", Map.of("kra", "vra", "krb", "vrb"));
+    ContentElement o1 = new ContentElementImpl("o1", Map.of("k1a", "v1a", "k1b", "v1b"));
+    ContentElement o11 = new ContentElementImpl("o11", Map.of("k11a", "v11a", "k11b", "v11b"));
+    ContentElement o2 = new ContentElementImpl("o2", Map.of("k2a", "v2a", "k2b", "v2b"));
     root.getChildren().put("o1", o1);
     root.getChildren().put("o2", o2);
     o1.getChildren().put("o11", o11);
 
-    Map<String, Object> expected = ImmutableMap.of("kra", "vra", "krb", "vrb",
-        "o1", ImmutableMap.of("k1a", "v1a", "k1b", "v1b",
-            "o11", ImmutableMap.of("k11a", "v11a", "k11b", "v11b")),
-        "o2", ImmutableMap.of("k2a", "v2a", "k2b", "v2b"));
+    Map<String, Object> expected = Map.of("kra", "vra", "krb", "vrb",
+        "o1", Map.of("k1a", "v1a", "k1b", "v1b",
+            "o11", Map.of("k11a", "v11a", "k11b", "v11b")),
+        "o2", Map.of("k2a", "v2a", "k2b", "v2b"));
 
     Map<String, Object> result = ContentElementConverter.toMap(root);
     assertEquals(expected, result);
